# polyname2

./: LICENSE  README.md  __init__.py  environment.yml  pyproject.toml  requirements.txt  setup.cfg
polyname/: check_database.py  isolate_polymer.py
polyname2/: __init__.py  monomer.py
