[metadata]
name = polyname2-muthuku
version = 0.0.1
author = Pragati Muthukumar
author_email = pragati.muthukumar@nrel.gov
description =A simple package to extract polymer names from a list of chemical entities outputted by a chemical extraction tool and get monomer names and monomer smiles from the existing polymers database, Pubchem or CIRPY.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/muthuku/polyname2
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = polyname2
packages = find:
python_requires = >=3.6

[options.packages.find]
where = polyname2
